Updated home-section-intro and contact-section-details-greeting top margins to 0 to fix excessive gap between content and heading

--- a/index.css
+++ b/index.css
@@ -153,7 +153,7 @@ nav ul li a{
         }
 
         #home-section-intro{
-            margin-top: 25px;
+            margin-top: 0;
             margin-left: auto;
             margin-right: auto;
             font-size: 22px;
@@ -198,10 +198,6 @@ nav ul li a{
             padding: 0;
         }
 
-        #project-section-projects-list li{
-
-        }
-
         #project-section-projects-list li a{
             font-size: 50px;
         }
@@ -215,6 +211,7 @@ nav ul li a{
 
         #contact-section-details-greeting {
             font-size: 50px;
+            margin-top: 0;
             margin-bottom: 25px;
         }
 
